--- a/package.json
+++ b/package.json
@@ -30,6 +30,14 @@
   "dependencies": {
     "express": "^4.13.4",
     "morgan": "^1.7.0",
-    "pug": "^2.0.0-alpha6"
+    "pug": "^2.0.0-alpha6",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.4.1",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-hot-loader": "^1.3.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"    
   }
 }
